--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,54 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project Starter</title>
+  <title>PFlexbox Example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./stylesheets/main.scss">
 </head>
 
 <body>
-  <!--  Your HTML goes here-->
-  <h1>Welcome to WEB 2620!!!!!</h1>
+  <header>
+    A Flexbox Example
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#">Link 1</a></li>
+      <li><a href="#">Link 2</a></li>
+      <li><a href="#">Link 3</a></li>
+      <li><a href="#">Link 4</a></li>
+      <li><a href="#">Link 5</a></li>
+    </ul>
+    <form action="#">
+      <input type="search" name="search" id="searchBox">
+    </form>
+  </nav>
+
+  <main>
+    <article>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet sapiente itaque obcaecati nihil harum officia ab sequi debitis, distinctio omnis atque quos placeat totam eaque vel eius laboriosam magni maxime.</p>
+    </article>
+    <aside>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+        <li>Item 6</li>
+        <li>Item 7</li>
+      </ul>
+    </aside>
+  </main>
+
+  <footer>
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+    <p>&copy; 2023 All Rights Reserved</p>
+  </footer>
+
+
 <script type="module" src="./javascripts/main.js"></script>
 </body>
 </html>
